# tauri_webview

./: .gitignore  LICENSE  README.md  README_EN.md  README_JA.md  config.ini
contents/: MANUAL.txt  README.txt  README_KO.txt
dev/: package-lock.json  package.json
dev/readme/: README_JA.txt  README_KO.txt
dev/scripts/: copy-contents.js  create-dist.js  create-release-zip.js  update-version.js
dev/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
dev/src-tauri/.cargo/: config.toml
dev/src-tauri/contents/: README_EN.txt  README_JA.txt
dev/src-tauri/html/: index.html  main.js  styles.css
dev/src-tauri/src/: lib.rs  main.rs
