[package]
name = "tauriwebview"
version = "0.1.0"
description = "A lightweight desktop application using Tauri"
authors = ["Developer"]
edition = "2021"

# Build output directory configuration
[profile.dev]
# Debug build output

[profile.release]
# Release build output

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauriwebview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
configparser = "3"
tiny_http = "0.12"

